fix footer overflowing on small screens

--- a/client/src/assets/styles/City.css
+++ b/client/src/assets/styles/City.css
@@ -133,7 +133,7 @@ p.transition{
 	}
 
 	.chart-wrapper > :nth-child(2) {
-		max-height: 80%;
+		max-height: 70%;
 	}
 
 
@@ -149,5 +149,9 @@ p.transition{
 
 	.city-section p, .transition{
 		width: 95vw;
+	}
+
+	.chart-wrapper footer{
+		font-size: 0.75em;
 	}
 }
